@@ -45,6 +45,8 @@ This file lists the incompatible changes between Version 2.x and older versions
     to your situation.
   - bnfisunit and bnfissunit: torsion unit exponent is now a t_INT (used
     to be a t_INTMOD)
+  - nfgaloisconj(deg 2 pol) now return the identity as the second automorphism
+    to follow nfroots and nfgaloisconj for higher degree.
 
 * Specific to the PARI library:
 ===============================
