@@ -20,6 +20,7 @@
   ***   in function do: galoisidentify(galoisinit(p))
   ***                   ^-----------------------------
   *** galoisidentify: incorrect type in checkgal (t_INT).
+[-x + 3, x]~
 [x]~
 [-x, x]~
 [-x, x, -x^3, x^3]~
@@ -125,4 +126,4 @@ x^6 + 21*x^4 + 116*x^2 + 64
 2 + z*x + 1/3*z^2, x^2 + 1/3*z^2]], [z^6 + 108, Mod(x, x^6 + 108), [x - z, x
  + (-1/12*z^4 + 1/2*z), x + (1/12*z^4 + 1/2*z), x + (-1/12*z^4 - 1/2*z), x +
  (1/12*z^4 - 1/2*z), x + z]]]
-Total time spent: 2312
+Total time spent: 1388
