@@ -134,6 +134,7 @@ BA  31- revert 2-12-0 C18: qfbsolve with default flag = previous behaviour
         (Configure --graphic=none)
     40- gpow(x,n): faster and more precise when n is a t_COMPLEX
     41- faster formula for log(2)
+BA  42- nfgaloisconj(deg 2 pol): swap result to follow nfroots.
 
   Added
      1- new GP function rootsof1
